# SysDialogue

./: .env.example  .gitattributes  .gitignore  .npmignore  2026-04-23-025254-local-command-caveatcaveat-the-messages-below.txt  AI_Hackathon_2026.md  CLAUDE.md  README.md  RUNNING.md  SysDialogue_项目介绍文档.md  package.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/: java-mysql-deployment-functional-test-report.md
framework/: ClaudeFeaturePlan.md  ClaudePlan2_st.md  ClaudePlan3_st.md  ClaudePlan4.1.md  ClaudePlan4.md  ClaudePlan5.3.md  ClaudePlan5.4.md  ClaudePlan5.4_Full.md  ClaudePlan5.md  ClaudeTechPlan.md  Claude计划1_st.md  Plan6.md  claudeplan6.md  claudeplan7.md  claudeplan8.md  claudeplan9.md  lazy-sniffing-pumpkin.md
scripts/: build-web.js  git_preflight.py  postinstall.js  preuninstall.js  run_java_mysql_ft.py
submission_materials/: 00_submission_index.md  00_提交材料索引.md  01_Agent配置说明.md  01_agent_configuration.md  02_core_prompt.md  02_核心Prompt结构.md  03_tools_and_capabilities.md  04_decision_paths.md  04_关键场景决策路径.md  05_self_test_and_validation.md  05_评测指令.md  06_design_explanation.md  06_设计说明.md  07_review_findings_closure.md  README.md
sysdialogue/: __init__.py
tests/: conftest.py  helpers.py  test_acceptance_bundle.py  test_acceptance_checklist.py  test_acceptance_mutation_drill.py  test_acceptance_runner.py  test_agent_upgrade_features.py  test_automation_and_access.py  test_cli_entrypoints.py  test_conversation_store.py  test_evidence_matrix.py  test_golden_scenarios.py  test_openai_chat_client.py  test_planner.py  (+12 more)
(+203 files in other folders)
