[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sysdialogue"
version = "1.0.3"
description = "SysDialogue — Linux 服务器运维智能代理 (v8)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "openai>=1.59.0",
    "paramiko>=3.4.0",
    "textual>=0.59.0,<1.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.1",
    "filelock>=3.13.0",
    "jinja2>=3.1.4",
    "rich>=13.7.0",
    "click>=8.1.7",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.30.0",
]

[project.scripts]
sysdialogue = "sysdialogue.app.cli:main"
sysdialogue-web = "sysdialogue.app.web_api:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sysdialogue*"]

[tool.setuptools.package-data]
sysdialogue = [
    "workflows/*.yaml",
]
